# feedback-bot

./: .env.dist  .gitignore  Dockerfile  Makefile  bot.service.dist  docker-compose.example.yml  pyproject.toml
alembic/: env.py
bot/: __main__.py  config_reader.py  user_topic_context.py
bot/handlers/: __init__.py
bot/handlers/from_users/: actions_in_pm.py
bot/locales/ru/: strings_example_ru.ftl
bot/middlewares/: context.py  topics_management.py
